<resources>
    <string name="app_name">redditCloneApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_community">Community</string>
    <string name="menu_profile">Profile</string>
    <string name="reddit_title">Reddit Clone</string>
    <string name="reports">Reports</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="nav_profile_name">Profile</string>
    <string name="nav_description">User description</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email addr</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="comments">Comments</string>
    <string name="view_post">View post</string>
    <string name="report">Report</string>
    <string name="avatar">Avatar</string>
    <string name="upload_avatar">Upload image</string>
    <string name="create_new_acc">Create a new account?</string>
    <string name="signInError">Username or password is wrong, try again..</string>
    <string name="signUpError">This username is already in use, try another..</string>
    <string name="profile_reg_date">Registration date</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="change_password">Change password</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="new_password">New password</string>
    <string name="submit">Submit</string>
    <string name="send">Send</string>
    <string name="posted_by">Posted by:</string>
    <string name="reply">Reply</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="created">Created</string>
    <string name="join">Join</string>
    <string name="rules">Rules</string>
    <string name="flairs">Flairs</string>
    <string name="sort_by">Sort by</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="details">Details</string>
    <string name="post">Post</string>
    <string name="create_a_new_post">New Post</string>
    <string name="cancel">Cancel</string>
    <string name="my_communities">My Communities</string>
    <string name="members">Members</string>
    <string name="basic">Basic</string>
    <string name="suspend_com">Suspend com</string>
    <string name="moderators">Moderators</string>
    <string name="name">Name</string>
    <string name="suspend_reason">Suspend reason</string>
    <string name="block">Block</string>
    <string name="view">View</string>
    <string name="community_rules">Community rules</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="community_flairs">Community flairs</string>
    <string name="flair_add_error">Flair name can\'t be empty</string>
    <string name="rule_add_error">Rule name can\'t be empty</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="report_post_text">Why are you reporting post </string>
    <string name="report_comment_text">Why are you reporting comment </string>
    <string name="sus_reason">Suspend reason..</string>
    <string name="unblock">Unblock</string>
    <string name="create_community">Create community</string>
    <string name="title_activity_create_community">CreateCommunityActivity</string>
    <string name="community_name_error">Community name can\'t be empty</string>
    <string name="community_desc_error">Community desc can\'t be empty</string>
    <string name="community_rules_error">Community rules can\'t be empty</string>
    <string name="community_flairs_error">Community flairs can\'t be empty</string>
    <string name="user_username_error">Profile username can\'t be empty</string>
    <string name="user_password_error">Profile password can\'t be empty</string>
    <string name="user_mail_error">Profile mail can\'t be empty, check mail form</string>
    <string name="user_description_error">Profile description can\'t be empty</string>
    <string name="post_title_error">Post title can\'t be empty</string>
    <string name="comment_text_error">Comment text can\'t be empty</string>
    <string name="post_text_error">Post text can\'t be empty</string>
    <string name="my_posts">My posts</string>
    <string name="my_comments">My comments</string>
    <string name="flair">Flair</string>
    <string name="no_sub_comments">No sub comments</string>
    <string name="up_vote_error_msg_post">You are already up vote this post</string>
    <string name="down_vote_error_msg_post">You are already down vote this post</string>
    <string name="up_vote_error_msg_comment">You are already up vote this comment</string>
    <string name="down_vote_error_msg_comment">You are already down vote this comment</string>
    <string name="display_name">Display name</string>
    <string name="change_pw_error_msg_dont_match">New password and confirm password do not match</string>
    <string name="change_pw_error_msg_dont_match_old">Incorrect old password</string>
    <string name="change_pw_error_msg_empty_fields">All fields are required</string>
    <string name="report_post_error_msg">You are already report this post</string>
    <string name="report_comment_error_msg">You are already report this comment</string>
    <string name="karma">Karma</string>
    <string name="post_reported">Post reported</string>
    <string name="comment_reported">Comment reported</string>

</resources>