<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.community.mycommunities.CreateCommunityActivity"
    android:background="@drawable/rounded_corners_bg"
    android:layout_margin="5dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_community"
        android:layout_marginTop="15dp"
        android:textSize="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp">
        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_weight="50"/>
        <EditText
            android:id="@+id/community_create_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:gravity="center"/>
        <ScrollView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/rounded_corners_bg"
            android:padding="5dp">
            <EditText
                android:id="@+id/community_create_desc"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:textSize="18dp" />
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
        <Button
            android:text="@string/rules"
            android:id="@+id/community_create_rules_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"/>
        <Button
            android:text="@string/flairs"
            android:id="@+id/community_create_flairs_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"/>
        <Button
            android:id="@+id/community_create_save_btn"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/community_create_fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_corners_bg"
        android:padding="5dp"/>


</LinearLayout>