<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.community.mycommunities.MyCommunityActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/my_community_name"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:text="Community Name"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center">
            <Button
                android:text="@string/basic"
                android:id="@+id/my_community_basic_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center">
            <Button
                android:text="@string/members"
                android:id="@+id/my_community_members_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center">
            <Button
                android:text="@string/flairs"
                android:id="@+id/my_community_flairs_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center">
            <Button
                android:text="@string/rules"
                android:id="@+id/my_community_rules_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/my_communities_admin_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center">
            <Button
                android:text="@string/moderators"
                android:id="@+id/my_community_moderators_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/my_community_suspend_comm_btn_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:visibility="gone">
            <Button
                android:text="@string/suspend_com"
                android:id="@+id/my_community_suspend_comm_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10px">
        <Button
            android:text="@string/view"
            android:id="@+id/my_community_view_btn"
            android:layout_marginRight="20dp"
            android:layout_width="150dp"
            android:layout_gravity="right"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/save"
            android:id="@+id/my_community_save_btn"
            android:layout_marginRight="20dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/my_community_fragment"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corners_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"/>

</LinearLayout>