<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.access.SignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/sign_up_form_layout"
        android:background="@color/black">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"/>
        </LinearLayout>
        <LinearLayout
            android:paddingTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/username"
                android:textColor="@color/red"/>
            <EditText
                android:layout_weight="50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up_username"
                android:inputType="text"/>
        </LinearLayout>
        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">
            <TextView
                android:layout_weight="50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/red"/>
            <EditText
                android:layout_weight="50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up_password"
                android:inputType="textPassword"/>
        </LinearLayout>
        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">
            <TextView
                android:layout_weight="50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/red"/>
            <EditText
                android:layout_weight="50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up_email"
                android:inputType="textEmailAddress"/>
        </LinearLayout>
        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">
            <TextView
                android:layout_weight="50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/red"/>
            <EditText
                android:layout_weight="50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up_description"
                android:inputType="text"/>
        </LinearLayout>
        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">
            <TextView
                android:layout_weight="50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avatar"
                android:textColor="@color/red"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_avatar"
                android:id="@+id/sign_up_avatar"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="50dp">
            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>