<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".post.PostEditActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/rounded_corners_bg"
    android:layout_margin="5dp"
    android:padding="10dp">
    <ImageView
        android:id="@+id/my_post_picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/rounded_corners_bg"
        android:padding="15px"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher_foreground"/>
    <Button
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_change"
        android:text="@string/save"/>
    <Button
        android:id="@+id/my_post_picture_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change picture"
        android:layout_gravity="right"
        android:layout_marginBottom="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <TextView
            android:text="@string/title"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"/>
        <EditText
            android:id="@+id/my_post_title_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <TextView
            android:text="@string/text"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:minWidth="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"/>
        <EditText
            android:id="@+id/my_post_text_edit"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:maxWidth="150dp"
            android:layout_weight="50"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">
        <TextView
            android:text="@string/flair"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"/>
        <Spinner
            android:id="@+id/my_post_flair_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/my_post_save_btn"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/my_post_cancel_btn"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>