<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.community.mycommunities.fragments.CommunityBasicInfoFragment"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
    <LinearLayout
        android:id="@+id/my_communities_layout_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">
            <TextView
                android:text="@string/name"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/my_community_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="right"
                android:layout_marginRight="20dp"
                android:textSize="18dp"/>
            <EditText
                android:id="@+id/my_community_name_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="right"
                android:layout_marginRight="20dp"
                android:textSize="18dp"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">
            <TextView
                android:text="@string/created"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/my_community_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="right"
                android:layout_marginRight="20dp"
                android:textSize="18dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">
            <TextView
                android:text="@string/suspend_com"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/my_community_is_suspended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="right"
                android:layout_marginRight="20dp"
                android:textSize="18dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">
            <TextView
                android:text="@string/suspend_reason"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/my_community_sus_reason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="right"
                android:layout_marginRight="20dp"
                android:textSize="18dp"/>
        </LinearLayout>

        <TextView
            android:text="@string/description"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">
            <ScrollView
                android:id="@+id/my_community_desc_scroll"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="150dp">
                <TextView
                    android:id="@+id/my_community_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:textSize="18dp" />
            </ScrollView>
            <EditText
                android:id="@+id/my_community_desc_edit"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:textSize="18dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:visibility="visible"/>

        </LinearLayout>
    </LinearLayout>

<!--    Buttons-->
    <LinearLayout
        android:id="@+id/my_community_basic_btn_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center">
        <Button
            android:text="@string/edit"
            android:id="@+id/my_community_basic_btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
        <LinearLayout
            android:id="@+id/my_community_basic_btn_save_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center"
            android:visibility="gone">
            <Button
                android:text="@string/cancel"
                android:id="@+id/my_community_basic_btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"/>
            <Button
                android:text="@string/save"
                android:id="@+id/my_community_basic_btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>